--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,197 @@
-h1 {
-    color: red;
+
+
+body {
+    font-family: 'Poppins', sans-serif, arial; 
+    min-height: 100vh;
+    margin: 0px;
+    display: grid;
+    width:100%;
+    background-color: #f2f2f2;
+  }
+  
+  .fa-customize{
+    color:#fff;
+    margin:5px;
+    font-size: 30px;
+    margin-top: 0px;
+  }
+ .fa-customize:hover{
+     color: #4B7AF0;
+ }
+
+header{
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+/* logo image*/
+
+
+
+
+img.logo{
+width: 100%;
+object-fit: contain;
+height: 60px;
+margin-bottom: 10px;
+}
+
+
+
+nav {
+    margin-left: 40px;
+    position: fixed;
+    top: 120px;
+    background: #fff;
+    z-index: 1000;
+    right: 200px;
+    left: 0px;
+    display: none;
+   
+}
+   
+nav ul{
+    padding: 10px;      
+}
+
+nav ul li{
+    display: block;  
+    padding: 20px; 
+       
+}
+ul li a:hover{
+    color:#4B7AF0 ;
+}
+.icons-nav{
+    margin: 5px;
+   
+      display: flex;
+      flex: 2;
+      flex-direction:row;
+      justify-content: space-between;
+      width:100%;
+      align-items: center;
+     
+  }
+   .icon-bars{
+      display: flex;
+      flex-direction: row;
+      flex:1;
+      justify-content: space-between;
+    }
+
+ #hamburger-menu{
+    display: none;
+}
+#hamburger-menu:checked ~ nav{
+    display: inline-block;
+}
+.hamburger-bar{
+    margin-left:10px ;
+    margin-right: 150px;
+}
+.icon-bars, .hamburger-bar .fas{
+    
+    font-size: 20px;
+}
+.icon-bars .fas{
+    padding: 20px;
+    
+}
+.icon-bars .fas:hover{
+    color: #4B7AF0;
+}
+
+ 
+/* Links*/
+ a{
+     text-decoration: none;
+     color: #000;
+     font-family: Arial, Helvetica, sans-serif;
+ }
+
+.active{
+    text-decoration: underline;
+    color: #4B7AF0;
+}
+ 
+
+/* buttons*/
+
+.shop-button{
+    background: #F0C14B;
+    color: #000;
+    border: 1px solid #707070;
+    border-radius: 5px;
+    font-size: 1em;
+    text-transform: uppercase;
+    padding: 10px 60px;
+    font-weight: bold;
+    margin-left: 20px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.shop-button:hover{
+    background-color: #fff;
+    color: #000;
+    border: 3px solid #F0C14B;
+}
+.cart{
+    background-color: #103444;
+    color: #fff;
+    text-decoration: none;
+    font-size: 1em;
+    padding: 5px 50px;
+    font-weight: none;
+    margin: 10px;
+    border: 1px solid #103444;
+    border-radius: 5px;
+    width: 100px;
+     cursor: pointer;
+    transition: 0.3s ease;
+    display: flex;
+    justify-content: center;
+}
+
+.cart:hover{
+    border: 3px solid #103444;
+    border-radius: 5px;
+    background-color: #fff;
+    color:#103444;
+
+}
+
+
+
+ 
+
+/*contact*/
+
+
+
+footer{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content:space-around ;
+    color:#fff;
+    background: url(../images/footer-texture.png);
+    margin-top: 100px;
+    padding: 10px;
+    }
+
+
+
+   
+   
+     
+}
+
+
+
+
+
