--- a/css/index.css
+++ b/css/index.css
@@ -1,68 +1,68 @@
 .banner-h1 h1{
   color: #fff;
-  font-size: 40px;
-  margin:0px 0px 30px 30px;     
+  font-size: 30px;
 }
-.h1-hightlight{
- color:#F0C14B;
- font-size: 50px;
-}
-.h1-wrap{
+span.h1-hightlight {
+  color: #F0C14B;
   display: block;
+  font-size:35px
 }
-
+ span.h1-wrap{
+  display: block;
+  color: #fff;
+}
 
 .banner-image{
- background-image:linear-gradient(rgba(0, 0, 0, 0.42)50%,rgba(0,0,0,0.42)50%), url(../images/background.jpg);
- width: 100%;
- height: 500px;
- background-size: cover;
- background-repeat: no-repeat;
- background-position: top right;
- position: relative;
+background-image:linear-gradient(rgba(0, 0, 0, 0.42)50%,rgba(0,0,0,0.42)50%), url(../images/background.jpg);
+width: 100%;
+height: 300px;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: top right;
+position: relative;
 }
 
 .banner-h1{
-    position: absolute;
-    text-align: center;
-    top: 100px;
-    left: 10px;
-       
+  position: absolute;
+  text-align: left;
+  top: 30px;
+  left: 75px;
+     
 }
 
 .all-product{
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 100%; 
-     margin: auto;
-    grid-gap: 10px;
-      
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 90%; 
+  margin: auto;
+  grid-gap: 10px;   
 }
 .all-product h2 {
-    grid-column: -1/1;
-    text-align: center;
-    font-size: 20px;
-  }
-  .all-product img {
-    width: 100%;
-     margin: auto;
- 
-  }
-  .products {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;}
+  grid-column: -1/1;
+  text-align: center;
+  font-size: 20px;
+}
+.all-product img {
+  width: 100%;
+  
+}
+.products {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+ background-color: #fff;
+ padding-bottom: 15px;
+ box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
 
-  .products h3, .products p{
-    font-size: 0.9em;
-    text-align:center;
-    margin: 7px;
-     font-family: Arial, Helvetica, sans-serif;
-     font-weight: lighter;
-      }
- .products p{
-
-    font-weight: bold;
- }
+.products h3, .products p {
+  font-size: 18px;
+  text-align:center;
+  margin: 7px;
+  font-family: 'Poppins', sans-serif ,arial;
+}
+.products p {
+   font-size: 26px;
+}
