--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,10 @@ body {
     display: grid;
     width:100%;
     background-color: #f2f2f2;
-  }
   
-  .fa-customize{
+  }
+ 
+   .fa-customize{
     color:#fff;
     margin:5px;
     font-size: 30px;
@@ -25,6 +26,8 @@ header{
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background: #fff;
+
 }
 /* logo image*/
 
@@ -57,8 +60,9 @@ nav ul{
 }
 
 nav ul li{
- display: block;  
- padding: 20px;       
+ display: block;
+ padding: 20px;
+
 }
 
 ul li a:hover{
@@ -104,7 +108,6 @@ ul li a:hover{
 a{
     text-decoration: none;
     color: #000;
-    font-family: Arial, Helvetica, sans-serif;
  }
 
 .active{
@@ -120,9 +123,8 @@ a{
     border-radius: 5px;
     font-size: 1em;
     text-transform: uppercase;
-    padding: 10px 60px;
+    padding: 10px 40px;
     font-weight: bold;
-    margin-left: 20px;
     cursor: pointer;
     transition: 0.3s ease;
 }
@@ -166,7 +168,7 @@ footer{
     color:#fff;
     background: url(../images/footer-texture.png);
     margin-top: 100px;
-    padding: 10px;
+   
 }
 
 
