--- a/css/hiking-jacket.css
+++ b/css/hiking-jacket.css
@@ -2,46 +2,55 @@
     display: flex;
     max-width: 1100px;
     margin:70px auto; 
+    background: #fff;
+    padding: 70px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .product-detail > *{
     flex: 1;  
 }
+
 .product_small-image {
-    width: 100%;    
+    width: 100%;  
+    box-shadow: rgba(128, 35, 35, 0.25) 0px 1px 4px;  
 }
+
 .single-product {
     display: flex;
-    justify-self: space-between;    
+    justify-self: space-between;  
+    
 }
 .single-product img{
     object-fit: contain;
-    height: 95px;
+    height: 100px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
    
 }
+.product-specific_price{
+    font-size: 25px;
+    font-weight: 500;
+}
 .product-specific_detail{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     padding:0px 40px;
 }
+
 .product-specific_detail h1{
   margin-top:0px;
 
 }
 /*..size..*/
-.product-specific_detail select{
+.product-specific_detail select, #quantity{
     display: block; 
     width: 50px;
     height: 40px;  
     border: 1px solid #707070;
     border-radius:5px;
     font-size:  18px;
-}
-.product-specific_detail, .quantity input{
-    display: block;
-    width: 40px;
-    height: 30px;  
-    font-size: 18px;
-    border: 1px solid #707070;
-    border-radius:5px;
-}
+  }
+
 input:focus{
     outline: none;
 }
