--- a/css/media.css
+++ b/css/media.css
@@ -8,17 +8,9 @@
 /*tablet style*/
 @media (min-width: 600px){
 
-    .all-product{
-        grid-template-columns: repeat(2, 1fr);
-        width: 90%; 
-        margin: auto;
-        margin-top: 60px;
-    }
-    .all-product h2{
-        font-size: 30px;
-    }
+/*..header..*/
 
- .banner-h1 h1{
+.banner-h1 h1{
   
     font-size: 30px;
         margin-left: 30px;
@@ -88,11 +80,25 @@ nav ul {
  header label {
      display: none;
   }
+/*..homepage..*/
+
+
+    .all-product{
+        grid-template-columns: repeat(2, 1fr);
+        width: 90%; 
+        margin: auto;
+        margin-top: 60px;
+    }
+    .all-product h2{
+        font-size: 30px;
+    }
+
+
+  /*...contact page..*/
+
 .contact-page_wrapper{
-    display: flex;
-    flex: 1;
-    flex-direction: column-reverse;
-    box-shadow: 0 5px 20px 0 rgba(0,0, 0, 25%);
+    display: flex;  
+    flex-direction:row;
   }
  
  
@@ -151,5 +157,10 @@ img.logo{
     object-fit: contain;
     height: 100px;   
     }
+    
+.contact-page_wrapper{
+        display: flex;  
+        flex-direction:row;
+      }
 }
    
