--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,9 @@ body {
     width:100%;
     background-color: #f2f2f2;
   }
-
+h1,
+h2{font-family: 'comfortaa', sans-serif, arial;
+}
 header{
   display: flex;
   flex: 1;
@@ -27,6 +29,7 @@ object-fit: contain;
 height: 60px;
 margin-bottom: 10px;
 }
+/*..navigation..*/
 
 nav {
  margin-left: 40px;
