--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
     max-width: 1500px;
     margin:60px auto;
     background: #fff;
-    height:70vh;
+    min-height:70vh;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .about h1{
@@ -11,6 +11,7 @@
 }
 .about-page_wrapper{
     display: flex;
+    flex-direction: column;
     flex: 1;
     gap: 10px;
 }
