--- a/css/contact.css
+++ b/css/contact.css
@@ -11,8 +11,8 @@ textarea{
     min-height:100px;
     }
 .contact{
-  margin: 30px auto;
-  
+   margin: 30px auto;
+    
 }
 .contact h1{
    text-align: center;
@@ -23,15 +23,20 @@ textarea{
     flex-direction: column-reverse;
     flex: 1;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+     
   }
 section.contact-page_detail{
     display: block;
     padding: 60px 30px;
     background: #fff; 
     border: 1px solid #f1f1f1; 
+    width:500px;
 }
 .contact-icon{
     padding-right: 20px;
+}
+.contact-page_form{
+    width:600px;
 }
 .contact-page_form > *{
     display: flex;
@@ -39,6 +44,7 @@ section.contact-page_detail{
     flex-direction: column;
     padding: 30px;
     background: #e4e4e4;
+    
 }
 span.important{
     color: #ff0000
