--- a/css/jacket.css
+++ b/css/jacket.css
@@ -2,7 +2,7 @@
 .jacket-page{
     display: flex;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 .jacket-page h1{
     text-align: center;
@@ -10,6 +10,7 @@
 }
 .jacket-page_wrapper{
     display: flex;
+    flex-direction: column;
     gap: 10px;
     flex-grow: 1;
     justify-content: space-around;   
@@ -17,15 +18,13 @@
 aside.jacket-category {
     display: flex;
     flex-direction: column;
-    padding-left: 0 40px;
     background-color: #e4e4e4;
     align-items: center;
     justify-content:flex-start;
-    padding: 40px;
-    width: 400px;
-    height: 70vh;
-    margin: 60px;
-    box-shadow:  rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    width: 250px;
+    max-height: 50vh;
+    margin: auto;
+    box-shadow: var(--box-shadow-small);
     border-radius: 10px;
  }
  
@@ -36,12 +35,10 @@ aside.jacket-category {
     display: flex;
     flex-direction: column;
     padding: 0.25rem;
-    align-items: left;
-    line-height: 2.125em;
-    flex-wrap: wrap;
+    align-items: center;
     list-style-type: none; 
     font-size: 20px;
-    
+    margin: 0;
 }
 .jacket-category li a:hover{
    color:#4B7AF0;
@@ -50,11 +47,13 @@ aside.jacket-category {
         
 }
 
-
-.jacket-page_wrapper .all-product_jacket{
-    grid-template-columns:1fr; 
-    margin:40px;
-}
+ .all-product_jacket{
+    display: grid;
+  grid-template-columns: 1fr;
+  width: 90%; 
+  margin: auto;
+  grid-gap: 10px;
+} 
 .products_card img{
    height: 400px;
   }
