--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,20 @@
 @import "import/links.css";
+@import "import/variable.css";
 
 body {
-    font-family: 'Poppins', sans-serif, arial; 
+    font-family: var(--text-paragraph),, sans-serif, arial; 
     min-height: 100vh;
     margin: 0px;
     display: grid;
-    width:100%;
+    grid-template-rows: auto 1fr auto;
+    width: 100%;
     background-color: #f2f2f2;
-  }
-h1,
-h2{font-family: 'comfortaa', sans-serif, arial;
 }
+h1,
+h2{font-family: var(--text-heading), sans-serif, arial;
+   
+}
+
 
 header{
   display: flex;
@@ -18,7 +22,7 @@ header{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #fff;
+  background: var(--primary-color);
 
 }
 /* logo image*/
@@ -36,7 +40,7 @@ nav {
  margin-left: 40px;
  position: fixed;
  top: 120px;
- background: #fff;
+ background: var(--primary-color);
  z-index: 1000;
  right: 200px;
  left: 0px;
@@ -53,7 +57,7 @@ nav li{
 }
 
 nav a:hover{
- color:#4B7AF0 ;
+ color:var(--active-color);
 }
 .icons-nav{
  margin: 5px;
@@ -88,10 +92,41 @@ nav a:hover{
 }
 
 .icon-bars .fas:hover{
-    color: #4B7AF0;
+    color: var(--active-color);
 }
-
-/* Links*/
+/*..product image, price  and detail ..*/
+.all-product{
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 90%; 
+    margin: auto;
+    grid-gap: 10px;   
+  }
+.all-product img {
+    width: 100%;
+    object-fit: contain;
+         
+  }
+.products {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   background-color: #fff;
+   padding-bottom: 15px;
+   box-shadow: var(--box-shadow-small);
+  }
+  
+  .products h3, .products p {
+    font-size: 18px;
+    text-align:center;
+    margin: 7px;
+    font-family: 'Poppins', sans-serif ,arial;
+  }
+  .products p {
+     font-size: 26px;
+  }
 
 /*...footer..*/
 
