--- a/css/jacket.css
+++ b/css/jacket.css
@@ -11,9 +11,8 @@
 .jacket-page_wrapper{
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    flex-grow: 1;
-    justify-content: space-around;   
+    flex: 1; 
+    gap: 10px;   
 }
 aside.jacket-category {
     display: flex;
@@ -21,9 +20,9 @@ aside.jacket-category {
     background-color: #e4e4e4;
     align-items: center;
     justify-content:flex-start;
-    width: 250px;
+    width: 350px;
     max-height: 50vh;
-    margin: auto;
+    margin:auto;
     box-shadow: var(--box-shadow-small);
     border-radius: 10px;
  }
