--- a/css/hiking-jacket.css
+++ b/css/hiking-jacket.css
@@ -1,29 +1,36 @@
 .product-detail{
     display: flex;
+    flex-direction: column;
     max-width: 1100px;
     margin:70px auto; 
     background: #fff;
-    padding: 70px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: var(--box-shadow-small);
 }
 .product-detail > *{
     flex: 1;  
+    margin-bottom: 50px;
+}
+.product_small-image{
+    box-shadow: var(--box-shadow-large);
+    margin-bottom:10px;
 }
 
-.product_small-image {
-    width: 100%;  
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;  
+.product_small-image img{
+    width: 100%; 
+    height: 400px; 
+      
 }
 
 .single-product {
     display: flex;
-    justify-self: space-between;  
-    
+    gap: 10px;
+    justify-content: space-around;
+        
 }
 .single-product img{
+    width: 100%;
     object-fit: contain;
-    height: 100px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    height: 140px; 
    
 }
 .product-specific_price{
@@ -33,29 +40,21 @@
 .product-specific_detail{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 10px;
     padding:0px 40px;
 }
-
+.product-detail_image{
+    display: flex;
+    flex-direction: column;
+    
+}
 .product-specific_detail h1{
   margin-top:0px;
 
 }
-/*..size..*/
-.product-specific_detail select, #quantity{
-    display: block; 
-    width: 50px;
-    height: 40px;  
-    border: 1px solid #707070;
-    border-radius:5px;
-    font-size:  18px;
-  }
-
-input:focus{
-    outline: none;
-}
 .product-specific_detail .cart{
     margin:40px 0px; 
+    padding: 20px 60px;
        
 }
 
