--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import "import/variable.css";
 
 body {
-    font-family: var(--text-paragraph),, sans-serif, arial; 
+    font-family: var(--text-paragraph), sans-serif arial; 
     min-height: 100vh;
     margin: 0px;
     display: grid;
@@ -121,6 +121,18 @@ nav a:hover{
   .products p {
      font-size: 26px;
   }
+/** input dimensions..**/
+ #size, #quantity{
+    display: block; 
+    width: 50px;
+    height: 40px;  
+    border: 1px solid #707070;
+    border-radius:5px;
+    font-size:  18px;
+  }
+input:focus{
+    outline: none;
+}
 
 /*...footer..*/
 
