--- a/css/success.css
+++ b/css/success.css
@@ -9,6 +9,8 @@
     box-shadow: rgba(99, 99, 99, 0.5) 0px 2px 8px 0px;
 }
 .success-page-wrapper{
+    display: flex;
+    flex-direction: column;
     position: absolute;
     top:10%;
     left: 33%;
