--- a/css/import/variable.css
+++ b/css/import/variable.css
@@ -4,7 +4,9 @@
     --primary-color: #fff;
     --cart-btn-color:#103444;
     --active-color:#4B7AF0;
+    --gray-background: #707070;
     --call-to-action-btn-color:#F0C14B;
     --box-shadow-small:rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     --box-shadow-large:rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    --green-color:#4bb543;
 }
