--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,101 +1,96 @@
 .main-checkout {
-    margin: 30px auto;
-    width: 90%;
-  }
-  .main-checkout h1 {
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  .main-checkout p {
-    text-align: left;
-    margin-left: 50px;
-  }
-  .main-checkout_wrapper {
-    display: flex;
-    flex: 1;
-    align-items: center;
-    gap: 20px;
-  }
-  .shipping-details_wrapper {
-    display: flex;
-    flex: 1;
-    column-gap: 10px;
-    background: #fff;
-    align-items: flex-start;
-    padding: 0 40px;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    height: 550px;
-    margin-left: 40px;
-  }
-  .title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-transform: uppercase;
-    font-weight: 200;
-    margin-top: 30px;
-  }
-  .checkout-product-image {
-    width: 400px;
-  }
-  .checkout-product-image img {
-    width: 100%;
-    object-fit: contain;
-  }
-  .checkout-product_size {
-    display: block;
-    padding-right: 100px;
-  }
-  .checkout-product_size p {
-    width: max-content;
-    margin: 0px;
-  }
-  
-  .checkout-product_size h2 {
-    font-size: 20px;
-    width: max-content;
-  }
-  .title-margin {
-    margin-top: 100px;
-  }
-  
-  .quantity {
-    width: max-content;
-    padding-right: 70px;
-  }
-  .checkout-product_price {
-    width: max-content;
-    padding-right: 40px;
-  }
-  
-  .order-summary {
-    box-sizing: border-box;
-    grid-area: checkout;
-    width: 500px;
-    background: #e0e0e0;
-    padding: 40px 50px 40px 0;
-    align-items: center;
-    line-height: 15px;
-    box-shadow: var(--box-shadow-small);
-    margin-right: 40px;
-    height: 500px;
-    position: sticky;
-  }
-  .total {
-    display: flex;
-    justify-content: space-between;
-  }
-  .order-summary h1 {
-    text-align: center;
-    margin-bottom: 40px;
-    margin-left: 50px;
-  }
-  .payment {
-    background: green;
-    padding: 15px 100px;
-  }
-  .paynow {
-    align-items: center;
-    margin: 50px 80px;
-  }
-  
+  max-width: 90%;
+  padding: 0 30px;
+}
+.main-checkout h1 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+.main-checkout p {
+  text-align: center;
+}
+.main-checkout_wrapper {
+  display: flex;
+  flex-direction: column;
+  margin: 1.25 rem;
+}
+.shipping-details_wrapper {
+  display: flex;
+  flex-direction: row;
+  background: var(--primary-color);
+  box-shadow: var(--box-shadow-small)
+}
+.custom_button {
+  min-width: 80%;
+  padding: 15px;
+  text-align: center;
+}
+.title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 200;
+}
+.shopping-cart {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+.shopping-cart_checkbox {
+  align-self: center;
+  padding-left: 15 px;
+}
+.shopping-cart-button {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 50px;
+}
+.checkout-now {
+  padding: 10px 53px;
+}
+.checkout-product-image img {
+  min-width: 100%;
+  height: 250px;
+  object-fit: contain;
+}
+.checkout-product_size {
+  display: block;
+}
+.checkout-product_size p {
+  margin: 0px;
+}
+.checkout-product_size h2 {
+  font-size: 20px;
+}
+.title-margin {
+  margin-top: 100px;
+}
+.title-margin {
+  margin-left: 15px;
+}
+.order-summary {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  padding: 20px;
+  background: #e0e0e0;
+  box-shadow: var(--box-shadow-small);
+}
+.total {
+  display: flex;
+  justify-content: space-between;
+}
+.total p.title-blod {
+  font-weight: bold;
+}
+.payment {
+  background: var(--green-color);
+}
+.paynow {
+  align-items: center;
+  margin: 50px 80px;
+}
