--- a/css/hiking-jacket.css
+++ b/css/hiking-jacket.css
@@ -1,63 +1,52 @@
-.product-detail{
-    display: flex;
-    flex-direction: column;
-    max-width: 1100px;
-    margin:70px auto; 
-    background: #fff;
-    box-shadow: var(--box-shadow-small);
+.product-detail {
+  display: flex;
+  flex-direction: column;
+  max-width: 1100px;
+  margin: 70px auto;
+  background: var(--primary-bg-color);
+  box-shadow: var(--box-shadow-small);
 }
-.product-detail > *{
-    flex: 1;  
-    margin-bottom: 50px;
+.product-detail > * {
+  flex: 1;
+  margin-bottom: 50px;
 }
-.product_small-image{
-    box-shadow: var(--box-shadow-large);
-    margin-bottom:10px;
+.product_small-image {
+  box-shadow: var(--box-shadow-large);
+  margin-bottom: 10px;
 }
-
-.product_small-image img{
-    width: 100%; 
-    height: 400px; 
-      
+.product_small-image img {
+  max-width: 100%;
+  height: 400px;
 }
 
 .single-product {
-    display: flex;
-    gap: 10px;
-    justify-content: space-around;
-        
+  display: flex;
+  gap: 10px;
+  justify-content: space-around;
 }
-.single-product img{
-    width: 100%;
-    object-fit: contain;
-    height: 140px; 
-   
+.single-product img {
+  max-width: 100%;
+  object-fit: contain;
+  height: 140px;
 }
-.product-specific_price{
-    font-size: 25px;
-    font-weight: 500;
+.product-specific_price {
+  font-size: 25px;
+  font-weight: 500;
 }
-.product-specific_detail{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding:0px 40px;
+.product-specific_detail {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 0px 40px;
 }
-.product-detail_image{
-    display: flex;
-    flex-direction: column;
-    
+.product-detail_image {
+  display: flex;
+  flex-direction: column;
 }
-.product-specific_detail h1{
-  margin-top:0px;
-
+.product-specific_detail h1 {
+  margin-top: 0px;
 }
-.product-specific_detail .cart{
-    margin:40px 0px; 
-    padding: 20px 60px;
-       
+.product-specific_detail .cart {
+  margin: 40px 0px;
+  padding: 20px 60px;
 }
-
-
-
-
