--- a/css/index.css
+++ b/css/index.css
@@ -1,46 +1,47 @@
-
-.banner-h1 h1{
-  color: #fff;
+.banner-h1 h1 {
+  color: var(--primary-color);
   font-size: 30px;
 }
 span.h1-hightlight {
-  color: #F0C14B;
+  color: var(--call-to-action-btn-color);
   display: block;
-  font-size:35px
+  font-size: 35px;
 }
- span.h1-wrap{
+span.h1-wrap {
   display: block;
-  color: #fff;
+  color: var(--primary-color);
 }
 
-.banner-image{
-background-image:linear-gradient(rgba(0, 0, 0, 0.42)50%,rgba(0,0,0,0.42)50%), url(../images/background.jpg);
-width: 100%;
-height: 300px;
-background-size: cover;
-background-repeat: no-repeat;
-background-position: top right;
-position: relative;
+.banner-image {
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.42) 50%,
+      rgba(0, 0, 0, 0.42) 50%
+    ),
+    url(../images/background.jpg);
+  max-width: 100%;
+  height: 300px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top right;
+  position: relative;
 }
 
-.banner-h1{
+.banner-h1 {
   position: absolute;
   text-align: left;
   top: 30px;
   left: 75px;
-     
 }
 
-.all-product{
+.all-product {
   display: grid;
   grid-template-columns: 1fr;
-  width: 90%; 
-  margin: auto;
-  gap: 10px;   
+  max-width: 90%;
+  margin: 0 auto;
+  gap: 10px;
 }
 .all-product h2 {
   grid-column: -1/1;
   text-align: center;
   font-size: 20px;
 }
-
