--- a/css/success.css
+++ b/css/success.css
@@ -1,35 +1,32 @@
-
-.success-page{
-    width: 900px;
-    height: 500px;
-    background: #fff; 
-    margin: auto;
-    margin-top: 100px;   
-    position: relative;
-    box-shadow: rgba(99, 99, 99, 0.5) 0px 2px 8px 0px;
+.success-page {
+  height: 500px;
+  background: var(--primary-bg-color);
+  margin: auto;
+  margin-top: 100px;
+  position: relative;
+  box-shadow: var(--box-shadow-small);
 }
-.success-page-wrapper{
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top:10%;
-    left: 33%;
-    text-align: center;
-
+.success-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-self: center;
+  padding: 0 20px;
+  text-align: center;
 }
-.success-page-wrapper p{
-    line-height: 5px;
-    font-weight: #707070;
+.success-page-wrapper p {
+  line-height: 5px;
+  font-weight: var(--gray-background);
 }
 
-
-.sucess-continue-shopping{
-    width: max-content;
-    text-transform: uppercase;
-    padding: 10px 60px;
-    margin-top: 30px;
+.sucess-continue-shopping {
+  text-transform: uppercase;
+  padding: 10px 60px;
+  margin-top: 30px;
+  align-self: center;
 }
-.success-sign{
-    color: #4BB543;
-    font-size: 100px;
+.success-sign {
+  color: var(--green-color);
+  font-size: 100px;
 }
